--- a/overview/core-concepts-architecture/architecture-overview.mdx
+++ b/overview/core-concepts-architecture/architecture-overview.mdx
@@ -1,126 +1,145 @@
 ---
-title: "Framework Architecture (with Diagram)"
-description: "Visualizes and explains the key architectural components of GoogleTest and GoogleMock—the test runner, assertion engine, matchers, mocking APIs, and integration points. Uses a concise mermaid diagram to illustrate typical data and control flow during test execution."
+title: "Architectural Overview"
+description: "Explore the high-level architecture through a visual mermaid diagram: how GoogleTest and GoogleMock interact, test execution workflow, integration points, and the major components that orchestrate test discovery, execution, and reporting."
 ---
 
-# Framework Architecture (with Diagram)
+# Architectural Overview
 
-## Introduction
-
-Welcome to the architectural overview of GoogleTest and GoogleMock, the core C++ testing and mocking frameworks developed by Google. This page is dedicated to visualizing and explaining how the key architectural components collaborate to empower your testing workflow. Understanding this will give you clarity on why the framework behaves the way it does and how control flows through your tests.
-
-By exploring this architecture, you’ll gain insight into the roles of the test runner, assertion engine, matchers, mocking APIs, and integration points. A concise Mermaid.js diagram will illustrate the typical data and control flow during test execution, making abstract concepts concrete.
+Explore the high-level architecture of GoogleTest and GoogleMock, understanding how these components collaborate to provide a seamless and powerful testing experience for C++ developers. This overview reveals the interactions between key components, illustrates the test execution workflow, and highlights major integration points for test discovery, execution, and reporting.
 
 ---
 
-## Architectural Components Overview
+## Hero Section & Value Proposition
 
-### Test Runner
+### Unlocking Effective Automated Testing with GoogleTest & GoogleMock
 
-The test runner orchestrates the execution of all your tests. It discovers registered tests, runs them sequentially or in parallel, and collects results. It interacts closely with both GoogleTest and GoogleMock components to manage the test lifecycle.
+GoogleTest and GoogleMock empower you to design, execute, and validate tests effortlessly, even for complex C++ codebases. By providing a robust mock framework alongside a solid testing core, they enable rapid prototyping, precise expectation verification, and reliable test outcomes.
 
-### Assertion Engine
+- Streamlined test discovery that automatically identifies and runs your tests.
+- Powerful mocking capabilities to simulate dependencies and isolate test scenarios.
+- Seamless integration of test execution and reporting for clear feedback.
+- Easy-to-adopt design allowing incremental improvements to your code's testability.
 
-Assertions are the backbone of test validation. The assertion engine evaluates conditions you specify in your tests, signaling success or failure. It provides the infrastructure for expressive and portable assertions that GoogleTest is known for.
+**For:** C++ developers, QA engineers, and continuous integration teams aiming to increase code quality and maintainability with automated tests.
 
-### GoogleMock Matchers
+---
 
-Matchers form the expressive language to specify expected argument values in mock function calls. They are predicates that validate the parameters passed during mock invocations. GoogleMock offers a rich, extensible set of built-in matchers and supports custom matchers for domain-specific needs.
+## What Is This Page About?
 
-### Mocking APIs
+This page presents a concise architectural overview of GoogleTest and GoogleMock. It visually maps out how these libraries work together internally to discover tests, execute them, mock dependencies, and generate comprehensive reports.
 
-The GoogleMock API lets you create mock classes, define mock methods, set expectations for method calls, and specify behaviors. This API abstracts the complexity of mocking, making it straightforward to define interactions and validate them in your tests.
+You will see how GoogleTest drives test execution, while GoogleMock integrates deeply for mocking support, creating a harmonious system.
+
+**Why this matters:** Understanding this architecture helps you to better grasp how your test code translates into executed tests, how mocks enforce expectations, and where integration points exist for customizing or extending the testing framework.
+
+---
+
+## Key Components & Interactions
+
+### High-Level Components
+
+- **GoogleTest Core**: Orchestrates test discovery, execution, assertions, and results reporting.
+- **GoogleMock**: Extends GoogleTest with mocking capabilities, injecting mock classes and verifying expectations.
+- **Test Runner (gmock_main)**: Initializes GoogleMock and, transitively, GoogleTest, then runs all registered tests.
+
+### Workflow Summary
+
+1. **Initialization**: The test runner initializes GoogleMock, which initializes GoogleTest.
+2. **Test Discovery**: GoogleTest scans for registered tests and test suites.
+3. **Test Execution**: Tests run sequentially or per configuration; during runs, mocks track and validate interactions.
+4. **Expectation Verification**: When mocks are destructed or tests finish, expectations on mock objects are automatically verified.
+5. **Reporting**: Test results, including successes, failures, and mismatch diagnostics for mocks, are reported with detailed context.
 
 ### Integration Points
 
-GoogleMock is tightly integrated with GoogleTest — the frameworks share initialization, test registration, and the test runner. This integration ensures a seamless experience when using mocks within your tests.
+- Mock classes are generated via macros inside your test code but hooked into the GoogleTest execution via GoogleMock's intercepts.
+- The test runner consolidates command-line flag parsing, environment setup, and execution flow.
 
 ---
 
-## Typical Test Execution Flow
-
-The flow below captures a typical control path when running tests using GoogleTest with GoogleMock enabled.
+## Mermaid Diagram: High-Level Architecture and Test Execution Flow
 
 ```mermaid
 flowchart TD
-  %% Start
-  Start([Start Test Execution]) --> Discover["Test Discovery & Registration"]
 
-  Discover --> Init["Initialize GoogleTest and GoogleMock"]
+  %% Initialization
+  Runner[gmock_main (Test Runner)] --> InitGoogleMock["InitGoogleMock()"]
+  InitGoogleMock --> InitGoogleTest["InitGoogleTest()"]
 
-  Init --> RunTests["Run Registered Tests One by One"]
+  %% Test Discovery
+  InitGoogleTest --> TestRegistry["GoogleTest Test Registry"]
+  TestRegistry --> Tests["Registered Test Suites & Tests"]
 
-  subgraph Test Execution
-    RunTests --> Setup["Test Fixture Setup"]
-    Setup --> TestBody["Execute Test Body"]
-    TestBody --> MockUse["Use Mock Objects"]
-    MockUse --> AssertionCheck["Evaluate Assertions & Verify Expectations"]
-    AssertionCheck --> Cleanup["Test Fixture Teardown"]
-  end
+  %% Test Execution
+  Runner --> RunTests["RUN_ALL_TESTS()"]
+  RunTests --> TestExecutionLoop["Iterate over each Test Suite & Test"]
+  TestExecutionLoop --> TestExecution["Execute Test"]
 
-  Cleanup --> Collect["Collect Results & Report"]
-  Collect --> End([End Test Execution])
+  %% Mocks Interaction
+  TestExecution --> MockObjects["Mock Objects Created in Test"]
+  MockObjects --> ExpectationTracking["Expectation Setup (EXPECT_CALL)"]
+  TestExecution --> MockVerification["Automatic Expectation Verification on Mock Destruction"]
 
-  %% Details: Mock Object Flow
-  subgraph Mocking Internals
-    MockUse --> MatcherEval["Matcher Evaluation"]
-    MatcherEval --> ExpectationCheck["Check Mock Expectations"]
-    ExpectationCheck --> ActionPerf["Perform Mock Actions"]
-    ActionPerf --> AssertionCheck
-  end
+  %% Reporting
+  TestExecution --> AssertionChecks["Assertions & Failures"]
+  AssertionChecks --> TestResults["Test Result Collection"]
+  MockVerification --> TestResults
+  TestResults --> ReportGeneration["Generate Test Reports & Logs"]
+  ReportGeneration --> Runner
 
-  %% Styling
-  classDef component fill:#cce5ff,stroke:#333,stroke-width:1px;
-  classDef flow fill:#e6ffe6,stroke:#333,stroke-width:1px;
-  class Start,End,Discover,Init,RunTests,Setup,TestBody,MockUse,AssertionCheck,Cleanup,Collect component;
-  class MatcherEval,ExpectationCheck,ActionPerf flow;
+  %% Labels
+  classDef component fill:#bbdefb,stroke:#1e88e5,stroke-width:2px;
+  class Runner,InitGoogleMock,InitGoogleTest,TestRegistry,Tests,RunTests,TestExecutionLoop,TestExecution,MockObjects,ExpectationTracking,MockVerification,AssertionChecks,TestResults,ReportGeneration component;
 ```
 
-This diagram demystifies test execution by showing how GoogleTest's test runner initiates and manages tests, while GoogleMock components dynamically evaluate mock interactions during the test body execution.
+---
+
+## Why Should You Care?
+
+Understanding this architectural overview allows you to:
+
+- Compose tests with confidence, knowing how test flow and mock verification are coordinated.
+- Effectively debug test failures by understanding when and how expectations on mocks are checked.
+- Plan for extension points if you want to integrate GoogleTest and GoogleMock into larger tooling or custom environments.
+- Appreciate the design decisions that make GoogleMock a friendlier and more powerful mocking framework compared to manual mocks.
 
 ---
 
-## Practical User Scenario
+## Getting Started Preview
 
-Imagine you are writing a unit test for a graphics class that depends on a `Turtle` interface for drawing. In your test, you create a `MockTurtle` object. During the test execution:
+To get your hands dirty following this architecture:
 
-- The test runner initializes and prepares to run your test.
-- Your test fixture sets up necessary preconditions.
-- Inside the test, when `MockTurtle` methods are called, GoogleMock intercepts these calls.
-- Matchers verify the passed arguments against your expectations.
-- Expectation checks validate call counts, order, and argument correctness.
-- Actions associated with mock methods execute, such as returning predefined values.
-- Assertions test outcomes and all expectations are verified before test teardown.
-- The test runner aggregates results and moves to the next test.
+- Begin by creating your first test and mock class (see documentation like [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)).
+- Use the test runner provided by `gmock_main` to run your tests.
+- Define `EXPECT_CALL` for mocks before exercising the code under test.
+- Observe detailed reporting from the automatic test execution and mock verification pipeline.
 
-This seamless interplay empowers you to write more expressive, reliable tests.
+See the [Getting Started Guides](/getting-started/) for detailed setup and quick-start examples.
 
 ---
 
-## Tips for Success
+## Practical Tips and Best Practices
 
-- **Understand the test lifecycle:** Familiarize yourself with how GoogleTest manages test discovery and execution to better structure your tests.
-- **Use matchers effectively:** Leveraging GoogleMock’s expressive matchers minimizes brittle tests and maximizes clarity.
-- **Set clear expectations:** Define precise but not overly strict expectations to avoid fragile tests.
-- **Leverage integration:** Remember GoogleMock is designed to work smoothly within GoogleTest’s framework; use both features together for best results.
+- Always set your mock expectations *before* exercising the code; GoogleMock relies on this ordering.
+- Design interfaces to favor dependency injection, enabling easy mocking.
+- Utilize the reporting details to quickly identify mismatches in call counts, argument values, or call orders.
+- Leverage command-line flags such as `--gmock_verbose=info` for enhanced diagnostic output.
 
----
+## Troubleshooting Common Pitfalls
 
-## Troubleshooting Common Issues
-
-- **Unexpected calls:** If a mock method is called more times than expected or with unexpected arguments, verify your `EXPECT_CALL` usage and argument matchers.
-- **Unverified expectations:** Ensure that expectations are set before exercising mock objects to avoid undefined behavior.
-- **Order violations:** When ordering matters, use `InSequence` or `After` clauses to enforce sequences.
-- **Runtime Initialization:** Always initialize GoogleMock through `testing::InitGoogleMock()` before running tests to avoid startup problems.
+- **Unmatched expectations:** Ensure that `EXPECT_CALL` precedes the invocation of the mocked methods.
+- **Unexpected calls:** Provide catch-all expectations where appropriate to avoid unexpected call failures.
+- **Mock object lifetime:** Verify that mocks are properly destroyed to trigger automatic expectation verification.
 
 ---
 
-## Next Steps
+## Additional Resources
 
-- Visit [What is GoogleTest?](../welcome-introduction/what-is-googletest) to deepen your understanding of foundational concepts.
-- Explore [Using Assertions and Matchers Effectively](../../guides/core-testing-patterns/using-assertions-and-matchers) for practical usage tips.
-- Check [Defining and Using Mocks](../../api-reference/mocking-framework-api/defining-mocks) to get started writing mocks.
+- [GoogleTest User's Guide](/docs/index.md)
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Mock Methods API Reference](/api-reference/mocking-and-matcher-api/mock-methods-api)
+- [gMock Cookbook](/docs/gmock_cook_book.md)
 
 ---
 
-This architectural insight sets the foundation for mastering GoogleTest and GoogleMock's powerful testing capabilities.
+With this architectural overview, you now have a clear mental model to navigate GoogleTest and GoogleMock’s internals and leverage their robust capabilities for effective C++ testing.
