--- a/getting-started/setup-prerequisites-installation/configuration-and-initial-setup.mdx
+++ b/getting-started/setup-prerequisites-installation/configuration-and-initial-setup.mdx
@@ -1,202 +1,271 @@
 ---
 title: "Configuration and Initial Setup"
-description: "Learn how to configure build files, link dependencies, and integrate GoogleTest/GoogleMock into your project structure for a seamless development experience. This page covers minimal configuration to get your test targets compiling and ready."
+description: "Step-by-step guidance on configuring your project to use GoogleTest and GoogleMock. Learn how to link libraries, include necessary headers, and tailor your environment for different build systems (CMake, Bazel, others)."
 ---
 
 # Configuration and Initial Setup
 
-Learn how to configure build files, link dependencies, and integrate GoogleTest and GoogleMock into your project structure for a seamless development experience. This page covers the minimal configuration you need to get your test targets compiling and ready.
+Configure your project to use GoogleTest and GoogleMock effectively with this step-by-step guide. Learn how to include necessary headers, link against the libraries, and tailor the setup for your build system, covering CMake, Bazel, and manual configurations.
 
 ---
 
-## 1. Prerequisites & Environment Preparation
+## 1. Include GoogleMock Headers
 
-Before configuring your project to use GoogleTest and GoogleMock, ensure your environment meets the following requirements:
-
-- **C++17 Support**: Your compiler must support C++17 or later.
-- **CMake**: Recommended for easy integration and build management. Version 3.14 or higher is ideal.
-- **Source Access**: Have the GoogleTest and GoogleMock source, either via cloning the repository or by including it as a submodule or external dependency.
-
-<Check>
-Make sure your development environment supports multithreading, especially if you plan on running tests in parallel. On non-pthreads platforms (e.g., Windows), thread safety may require additional configuration.
-</Check>
-
----
-
-## 2. Configuring Your Build Files
-
-You need to properly link GoogleTest and GoogleMock libraries and headers to your test targets. The instructions below assume you use CMake; adapt accordingly if you use another build system.
-
-### 2.1. Include GoogleMock and GoogleTest in Your Build
-
-GoogleMock is bundled with GoogleTest and extends it. To include both:
-
-- Fetch the GoogleTest source code as part of your project or install it system-wide.
-- Use `add_subdirectory()` in your `CMakeLists.txt` to incorporate the GoogleTest source.
-
-Example minimal `CMakeLists.txt` snippet:
-
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyTestProject CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Fetch GoogleTest and GoogleMock if not already present
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
-)
-# For Windows: dynamically link CRT
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# Add your test executable
-add_executable(my_tests test_sample.cpp)
-
-# Link the test executable with GoogleTest and GoogleMock
-# Use gmock_main to get main() function for your tests
-target_link_libraries(my_tests PRIVATE gmock_main)
-
-# Enable testing and add tests
-enable_testing()
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-### 2.2. Linking Explanation
-
-- `gmock_main` includes GoogleMock and GoogleTest, and also provides a default `main()` function for running tests.
-- You can link with `gmock` if you prefer to write a custom `main()`.
-
-<Note>
-Linking against `gmock_main` is recommended unless you have special initialization needs.
-</Note>
-
----
-
-## 3. Setting Up Your Source Files for Testing
-
-### 3.1. Including Headers
-
-In your test source files, include the GoogleMock header:
+To start using GoogleMock in your tests, include its main header file `gmock.h`. This header consolidates the necessary components for mocking:
 
 ```cpp
 #include <gmock/gmock.h>
 ```
 
-This header automatically includes GoogleTest headers and all mock-related facilities.
+This single include file brings in mocking facilities such as actions, matchers, cardinalities, and function mockers. It also handles initialization routines for GoogleMock and GoogleTest.
 
-### 3.2. Writing a Basic Test
-
-For example, a simple test can look like:
-
-```cpp
-#include <gmock/gmock.h>
-
-using ::testing::Test;
-
-TEST(ExampleTest, SimpleAssertion) {
-  EXPECT_EQ(1 + 1, 2);
-}
-```
+> **Tip:** Always include `gmock/gmock.h` instead of individual headers for easier maintenance and consistency.
 
 ---
 
-## 4. Initializing GoogleMock and Running Tests
+## 2. Initialize GoogleMock and GoogleTest
 
-If you've linked with `gmock_main`, the test runner initialization is done for you.
+Before running your tests, initialize GoogleMock (which also initializes GoogleTest) by calling `InitGoogleMock()`. This function parses command-line flags for both frameworks and prepares the environment.
 
-If you write your own `main()`, initialize the framework as follows:
+### Initialization Examples
+
+- **Standard initialization with `argc` and `argv` (typical for main functions):**
 
 ```cpp
-#include <gmock/gmock.h>
-
-int main(int argc, char **argv) {
+int main(int argc, char** argv) {
   testing::InitGoogleMock(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-This initializes both GoogleTest and GoogleMock, parses all testing-related flags, and executes all tests.
+- **Windows UNICODE mode (using `wchar_t`):**
 
-<Warning>
-Do not forget to pass command line arguments to `InitGoogleMock`, or test flags may not be recognized.
-</Warning>
+```cpp
+int wmain(int argc, wchar_t** argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
 
----
+- **Embedded/Arduino platforms without command line arguments:**
 
-## 5. Minimal Example: Full Setup Walkthrough
+```cpp
+testing::InitGoogleMock();
+```
 
-Follow these steps to get started quickly:
-
-<Steps>
-<Step title="Step 1: Clone GoogleTest">Clone the googletest repository at a stable release:<br><br>```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-```</Step>
-<Step title="Step 2: Setup your CMakeLists.txt">Create or edit your `CMakeLists.txt` to include GoogleTest as a dependency. Use the FetchContent module or add it as a subdirectory if you have cloned it locally (see Section 2 for example).</Step>
-<Step title="Step 3: Create your test file">Write a test source file (`test_sample.cpp`) that includes `<gmock/gmock.h>` and contains at least one `TEST()` or `TEST_F()` macro.</Step>
-<Step title="Step 4: Build your tests">Generate and build your project using CMake:<br><br>```bash
-mkdir build && cd build
-cmake ..
-cmake --build .
-```</Step>
-<Step title="Step 5: Run your tests">Run the compiled test executable:<br><br>```bash
-./my_tests
-```<br>This runs all your tests and reports results to the console.</Step>
-</Steps>
+> **Note:** Calling `InitGoogleMock` ensures that both GoogleMock and GoogleTest flags are recognized and removed from `argv`.
 
 ---
 
-## 6. Practical Tips & Best Practices
+## 3. Link Against GoogleTest and GoogleMock Libraries
 
-- **Use `gmock_main` library** unless you need custom test initialization.
-- **Keep mock classes in test-only directories** or files to avoid leaking test code into production binaries.
-- **Avoid mocking code you do not own**; instead use adapters or interfaces owned by your code.
-- **Name test suites and fixtures clearly** following C++ style guidelines (avoid underscores).
-- **Leverage sequences (`::testing::InSequence`)** to test call orders when needed.
+To successfully compile and run your tests with mocking support, link your test binaries against both GoogleTest and GoogleMock libraries.
 
----
+### Typical Link Targets:
 
-## 7. Common Troubleshooting
+- `gtest` - GoogleTest core
+- `gmock` - GoogleMock core (includes GoogleTest dependencies)
+- `gtest_main` - GoogleTest main() function implementation
+- `gmock_main` - GoogleMock main() function implementation (includes GoogleTest)
 
-<AccordionGroup title="Troubleshooting" >
-<Accordion title="Build Fails with Compiler Errors Related to Runtime Library Mismatch on Windows">
-This is often caused by differences between your project's runtime linkage (dynamic vs static) and GoogleTest's default. Fix it by setting `gtest_force_shared_crt` to `ON` as shown in the sample CMakeLists.txt in section 2.1.
-</Accordion>
-<Accordion title="Tests Do Not Run or No Output Shows Up">
-Make sure you linked to `gmock_main` or that your `main()` calls `testing::InitGoogleMock(&argc, argv);` before running `RUN_ALL_TESTS()`.
-</Accordion>
-<Accordion title="GoogleMock Macros Like `EXPECT_CALL` Are Not Found">
-Verify your source file includes `<gmock/gmock.h>`. Don't include GoogleTest headers alone when using mocks.
-</Accordion>
-<Accordion title="Linker Errors About Missing Symbols from gmock or gtest">
-Check that your test executable links to `gmock_main` or `gmock` and `gtest` properly. Ensure you have built GoogleTest libraries first if using them separately.
-</Accordion>
-</AccordionGroup>
+### Recommendation:
 
----
+Link against `gmock_main` and `gmock` to use the built-in `main()` function that initializes both frameworks and runs all tests.
 
-## 8. Next Steps
+Example linking flags for CMake projects:
 
-After successful setup and initial test compilation:
+```cmake
+target_link_libraries(my_test PRIVATE gmock_main)
+```
 
-- Write more tests including mocks; start with [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html).
-- Explore advanced configuration and mock features in the [Mocking Reference](../docs/reference/mocking.md).
-- Review integration with your build system if not using CMake.
-- Check the [GoogleTest Primer](../docs/primer.md) for writing effective tests.
+For manual makefiles, link with corresponding libraries, e.g.: 
+
+```
+-lpthread -lgmock_main -lgmock -lgtest
+```
+
+> **Tip:** The `gmock_main` library contains an example `main()` in `gmock_main.cc` that calls `InitGoogleMock` and runs all tests. Linking this avoids writing your own main function.
 
 ---
 
-## References
+## 4. Configure Your Build System
 
-- [GoogleTest GitHub](https://github.com/google/googletest) repository
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) tutorial
-- [GoogleTest Primer](../docs/primer.md)
-- [Mocking Reference](../docs/reference/mocking.md)
-- [Installation and Build Instructions](../getting-started/setup-prerequisites-installation/installation-methods.md)
+### 4.1 CMake
+
+GoogleTest and GoogleMock provide official CMake support. To add GoogleTest/GoogleMock to your CMake project:
+
+#### Option 1: Using Installed Libraries
+
+After installing GoogleTest/GoogleMock, use `find_package`:
+
+```cmake
+find_package(GTest CONFIG REQUIRED)
+add_executable(my_test test.cpp)
+target_link_libraries(my_test PRIVATE GTest::gmock_main)
+```
+
+#### Option 2: Building as Part of Your Project
+
+Include GoogleTest as a subdirectory for consistent compiler/linker flags:
+
+```cmake
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+# This prevents runtime library conflicts on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+add_executable(my_test test.cpp)
+target_link_libraries(my_test PRIVATE gmock_main)
+```
+
+> **Best Practice:** Set C++ standard at least to C++17 using `set(CMAKE_CXX_STANDARD 17)`.
+
+### 4.2 Bazel
+
+If using Bazel, GoogleTest and GoogleMock are usually available as external dependencies. Refer to your workspace setup to include the appropriate Bazel rules and dependencies.
+
+> **See:** The [Integration and Platform Support](https://google.github.io/googletest/integration-and-platforms.html) guide for detailed Bazel instructions.
+
+### 4.3 Manual Build Systems
+
+When building without CMake or Bazel:
+
+- Download or clone GoogleTest/GoogleMock sources
+- Ensure your compile flags support C++17
+- Compile GoogleTest and GoogleMock sources
+- Link compiled static or shared libraries to your test binaries
+
+> **Tip:** Follow compilation and linking order carefully to avoid undefined reference errors.
 
 ---
 
-Unlock the power of automated testing with GoogleTest and GoogleMock by correctly configuring your environment and projects with these essential steps. Start running robust, maintainable C++ tests in no time!
+## 5. Include Paths and Compiler Flags
+
+Make sure your compiler knows where to find GoogleTest and GoogleMock headers by adding the following include paths:
+
+- `googletest/include`
+- `googlemock/include`
+
+Example (GCC/Clang):
+
+```
+-I/path/to/googletest/include -I/path/to/googlemock/include
+```
+
+### C++ Standard
+
+GoogleTest and GoogleMock require C++17 or later.
+
+In CMake:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+In compiler command line:
+
+```
+-std=c++17
+```
+
+> **Note:** Setting the standard consistently prevents build and linker issues.
+
+---
+
+## 6. Setting GoogleMock Behavior with Flags
+
+You can customize GoogleMock behavior using runtime flags (typically passed as command-line arguments):
+
+| Flag                             | Description                                                                       |
+|---------------------------------|-----------------------------------------------------------------------------------|
+| `--gmock_catch_leaked_mocks=0/1` | Disable or enable failure on leaked mock objects (default is enabled).          |
+| `--gmock_verbose=info|warning|error` | Control verbosity of GoogleMock output (default is `warning`).                  |
+
+Flags are parsed during `InitGoogleMock()`. You can also set them programmatically:
+
+```cpp
+::testing::FLAGS_gmock_verbose = "error";
+```
+
+---
+
+## 7. Example: Minimal Setup for a Basic Test with Mock
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+class Foo {
+ public:
+  virtual ~Foo() = default;
+  virtual int Bar(int x) = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, Bar, (int x), (override));
+};
+
+TEST(FooTest, BarReturnsExpectedValue) {
+  MockFoo mock_foo;
+
+  ON_CALL(mock_foo, Bar(::testing::_))
+      .WillByDefault(::testing::Return(7));
+
+  EXPECT_CALL(mock_foo, Bar(42))
+      .Times(1);
+
+  EXPECT_EQ(mock_foo.Bar(42), 7);
+}
+
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Compile and link this file with GoogleMock and GoogleTest libraries, then run the resulting executable.
+
+---
+
+## 8. Troubleshooting
+
+### Common Issues
+
+- **Missing headers or symbols:**
+  - Verify include paths and link libraries.
+  - Ensure GoogleMock and GoogleTest are correctly installed.
+
+- **C++ standard errors:**
+  - Confirm the `-std=c++17` or equivalent compiler flag is set.
+
+- **Linker errors on Windows with CRT mismatches:**
+  - Use `gtest_force_shared_crt` CMake option to align runtime linkage.
+
+- **Flags not recognized or ignored:**
+  - Make sure to call `InitGoogleMock()` *before* running tests or setting flags.
+
+<Tip>
+If you encounter unresolved external symbols, especially on Windows, verify that you are linking consistently with GoogleMock's libraries, and check for any CRT mismatches between your project and GoogleMock build.
+</Tip>
+
+---
+
+## 9. Additional Resources
+
+- [GoogleTest Primer Guide](../primer.md) — Learn basics of GoogleTest usage.
+- [gMock Cheat Sheet](../gmock_cheat_sheet.md) — Quick reference for mocking syntax.
+- [Integration and Platform Support](../overview/features-integration/integration-and-platforms.md) — Details on various platform integrations.
+- [Installation Instructions](../getting-started/setup-prerequisites-installation/installation-platforms.md) — How to install GoogleTest and GoogleMock.
+- [Mocking Reference](../docs/reference/mocking.md) — In-depth explanation of mocking APIs.
+
+For source code, see the main header file: [`gmock/include/gmock/gmock.h`](https://github.com/google/googletest/blob/main/googlemock/include/gmock/gmock.h).
+
+---
+
+Configure your project now using these actionable steps to smoothly integrate GoogleTest and GoogleMock into your development workflow, enabling powerful C++ test automation and mocking.
